LittleDuckParser.py
# Generated from LittleDuck.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LittleDuckParser ( Parser ):

    grammarFileName = "LittleDuck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "':'", "'('", "')'", "'['", "']'", 
                     "','", "'+'", "'='", "'-'", "'*'", "'/'", "'>'", "'<'", 
                     "'<>'", "'print'", "'prog'", "'end'", "'var'", "'int'", 
                     "'float'", "'si'", "'sino'", "'mientras'" ]

    symbolicNames = [ "<INVALID>", "SEMICOLON", "COLON", "OPENP", "CLOSEP", 
                      "OPENB", "CLOSEB", "COMMA", "PLUS", "EQUALS", "MINUS", 
                      "TIMES", "DIVISION", "MORETHAN", "LESSTHAN", "NOT", 
                      "PRINT", "PROG", "END", "VAR", "INT", "FLOAT", "SI", 
                      "SINO", "MIENTRAS", "STRING", "CTE_I", "CTE_F", "ID", 
                      "WS" ]

    RULE_programa = 0
    RULE_vars = 1
    RULE_pnvar = 2
    RULE_var_id = 3
    RULE_cuerpo = 4
    RULE_tipo = 5
    RULE_estatuto = 6
    RULE_asigna = 7
    RULE_asigna_var = 8
    RULE_exit_equals = 9
    RULE_expresion = 10
    RULE_h = 11
    RULE_exit_morethan = 12
    RULE_exit_lessthan = 13
    RULE_exit_not = 14
    RULE_exit_exp = 15
    RULE_condicion = 16
    RULE_m = 17
    RULE_exit_openp = 18
    RULE_exit_closep = 19
    RULE_exit_si = 20
    RULE_exit_sino = 21
    RULE_exit_condition = 22
    RULE_ciclo = 23
    RULE_exit_while = 24
    RULE_exit_endwhile = 25
    RULE_escritura = 26
    RULE_k = 27
    RULE_w = 28
    RULE_exp = 29
    RULE_exit_plus = 30
    RULE_exit_minus = 31
    RULE_termino = 32
    RULE_exit_times = 33
    RULE_exit_division = 34
    RULE_exit_termino = 35
    RULE_exit_factor = 36
    RULE_factor = 37
    RULE_var_cte = 38

    ruleNames =  [ "programa", "vars", "pnvar", "var_id", "cuerpo", "tipo", 
                   "estatuto", "asigna", "asigna_var", "exit_equals", "expresion", 
                   "h", "exit_morethan", "exit_lessthan", "exit_not", "exit_exp", 
                   "condicion", "m", "exit_openp", "exit_closep", "exit_si", 
                   "exit_sino", "exit_condition", "ciclo", "exit_while", 
                   "exit_endwhile", "escritura", "k", "w", "exp", "exit_plus", 
                   "exit_minus", "termino", "exit_times", "exit_division", 
                   "exit_termino", "exit_factor", "factor", "var_cte" ]

    EOF = Token.EOF
    SEMICOLON=1
    COLON=2
    OPENP=3
    CLOSEP=4
    OPENB=5
    CLOSEB=6
    COMMA=7
    PLUS=8
    EQUALS=9
    MINUS=10
    TIMES=11
    DIVISION=12
    MORETHAN=13
    LESSTHAN=14
    NOT=15
    PRINT=16
    PROG=17
    END=18
    VAR=19
    INT=20
    FLOAT=21
    SI=22
    SINO=23
    MIENTRAS=24
    STRING=25
    CTE_I=26
    CTE_F=27
    ID=28
    WS=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROG(self):
            return self.getToken(LittleDuckParser.PROG, 0)

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(LittleDuckParser.SEMICOLON, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(LittleDuckParser.CuerpoContext,0)


        def END(self):
            return self.getToken(LittleDuckParser.END, 0)

        def vars_(self):
            return self.getTypedRuleContext(LittleDuckParser.VarsContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = LittleDuckParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(LittleDuckParser.PROG)
            self.state = 79
            self.match(LittleDuckParser.ID)
            self.state = 80
            self.match(LittleDuckParser.SEMICOLON)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 81
                self.vars_()


            self.state = 84
            self.cuerpo()
            self.state = 85
            self.match(LittleDuckParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LittleDuckParser.VAR, 0)

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LittleDuckParser.TipoContext)
            else:
                return self.getTypedRuleContext(LittleDuckParser.TipoContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(LittleDuckParser.COLON)
            else:
                return self.getToken(LittleDuckParser.COLON, i)

        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LittleDuckParser.Var_idContext)
            else:
                return self.getTypedRuleContext(LittleDuckParser.Var_idContext,i)


        def pnvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LittleDuckParser.PnvarContext)
            else:
                return self.getTypedRuleContext(LittleDuckParser.PnvarContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(LittleDuckParser.SEMICOLON)
            else:
                return self.getToken(LittleDuckParser.SEMICOLON, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LittleDuckParser.COMMA)
            else:
                return self.getToken(LittleDuckParser.COMMA, i)

        def getRuleIndex(self):
            return LittleDuckParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars_(self):

        localctx = LittleDuckParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(LittleDuckParser.VAR)
            self.state = 101 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.tipo()
                self.state = 89
                self.match(LittleDuckParser.COLON)
                self.state = 90
                self.var_id()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 91
                    self.match(LittleDuckParser.COMMA)
                    self.state = 92
                    self.var_id()
                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 98
                self.pnvar()
                self.state = 99
                self.match(LittleDuckParser.SEMICOLON)
                self.state = 103 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20 or _la==21):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PnvarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LittleDuckParser.RULE_pnvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPnvar" ):
                listener.enterPnvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPnvar" ):
                listener.exitPnvar(self)




    def pnvar(self):

        localctx = LittleDuckParser.PnvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pnvar)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def getRuleIndex(self):
            return LittleDuckParser.RULE_var_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_id" ):
                listener.enterVar_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_id" ):
                listener.exitVar_id(self)




    def var_id(self):

        localctx = LittleDuckParser.Var_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(LittleDuckParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CuerpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPENB(self):
            return self.getToken(LittleDuckParser.OPENB, 0)

        def CLOSEB(self):
            return self.getToken(LittleDuckParser.CLOSEB, 0)

        def estatuto(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LittleDuckParser.EstatutoContext)
            else:
                return self.getTypedRuleContext(LittleDuckParser.EstatutoContext,i)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_cuerpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuerpo" ):
                listener.enterCuerpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuerpo" ):
                listener.exitCuerpo(self)




    def cuerpo(self):

        localctx = LittleDuckParser.CuerpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cuerpo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(LittleDuckParser.OPENB)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 289472512) != 0):
                self.state = 110
                self.estatuto()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(LittleDuckParser.CLOSEB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(LittleDuckParser.INT, 0)

        def FLOAT(self):
            return self.getToken(LittleDuckParser.FLOAT, 0)

        def getRuleIndex(self):
            return LittleDuckParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = LittleDuckParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==20 or _la==21):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstatutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asigna(self):
            return self.getTypedRuleContext(LittleDuckParser.AsignaContext,0)


        def condicion(self):
            return self.getTypedRuleContext(LittleDuckParser.CondicionContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(LittleDuckParser.CicloContext,0)


        def escritura(self):
            return self.getTypedRuleContext(LittleDuckParser.EscrituraContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto" ):
                listener.enterEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto" ):
                listener.exitEstatuto(self)




    def estatuto(self):

        localctx = LittleDuckParser.EstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_estatuto)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.asigna()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.condicion()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.ciclo()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 123
                self.escritura()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asigna_var(self):
            return self.getTypedRuleContext(LittleDuckParser.Asigna_varContext,0)


        def EQUALS(self):
            return self.getToken(LittleDuckParser.EQUALS, 0)

        def exit_equals(self):
            return self.getTypedRuleContext(LittleDuckParser.Exit_equalsContext,0)


        def expresion(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpresionContext,0)


        def SEMICOLON(self):
            return self.getToken(LittleDuckParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return LittleDuckParser.RULE_asigna

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsigna" ):
                listener.enterAsigna(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsigna" ):
                listener.exitAsigna(self)




    def asigna(self):

        localctx = LittleDuckParser.AsignaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_asigna)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.asigna_var()
            self.state = 127
            self.match(LittleDuckParser.EQUALS)
            self.state = 128
            self.exit_equals()
            self.state = 129
            self.expresion()
            self.state = 130
            self.match(LittleDuckParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Asigna_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckParser.ID, 0)

        def getRuleIndex(self):
            return LittleDuckParser.RULE_asigna_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsigna_var" ):
                listener.enterAsigna_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsigna_var" ):
                listener.exitAsigna_var(self)




    def asigna_var(self):

        localctx = LittleDuckParser.Asigna_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_asigna_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(LittleDuckParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exit_equalsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LittleDuckParser.RULE_exit_equals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExit_equals" ):
                listener.enterExit_equals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExit_equals" ):
                listener.exitExit_equals(self)




    def exit_equals(self):

        localctx = LittleDuckParser.Exit_equalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exit_equals)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpContext,0)


        def exit_exp(self):
            return self.getTypedRuleContext(LittleDuckParser.Exit_expContext,0)


        def h(self):
            return self.getTypedRuleContext(LittleDuckParser.HContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = LittleDuckParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expresion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.exp()
            self.state = 137
            self.exit_exp()
            self.state = 138
            self.h()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MORETHAN(self):
            return self.getToken(LittleDuckParser.MORETHAN, 0)

        def exit_morethan(self):
            return self.getTypedRuleContext(LittleDuckParser.Exit_morethanContext,0)


        def exp(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpContext,0)


        def exit_exp(self):
            return self.getTypedRuleContext(LittleDuckParser.Exit_expContext,0)


        def LESSTHAN(self):
            return self.getToken(LittleDuckParser.LESSTHAN, 0)

        def exit_lessthan(self):
            return self.getTypedRuleContext(LittleDuckParser.Exit_lessthanContext,0)


        def NOT(self):
            return self.getToken(LittleDuckParser.NOT, 0)

        def exit_not(self):
            return self.getTypedRuleContext(LittleDuckParser.Exit_notContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_h

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterH" ):
                listener.enterH(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitH" ):
                listener.exitH(self)




    def h(self):

        localctx = LittleDuckParser.HContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_h)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 4, 7]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(LittleDuckParser.MORETHAN)
                self.state = 142
                self.exit_morethan()
                self.state = 143
                self.exp()
                self.state = 144
                self.exit_exp()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.match(LittleDuckParser.LESSTHAN)
                self.state = 147
                self.exit_lessthan()
                self.state = 148
                self.exp()
                self.state = 149
                self.exit_exp()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 151
                self.match(LittleDuckParser.NOT)
                self.state = 152
                self.exit_not()
                self.state = 153
                self.exp()
                self.state = 154
                self.exit_exp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exit_morethanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LittleDuckParser.RULE_exit_morethan

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExit_morethan" ):
                listener.enterExit_morethan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExit_morethan" ):
                listener.exitExit_morethan(self)




    def exit_morethan(self):

        localctx = LittleDuckParser.Exit_morethanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exit_morethan)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exit_lessthanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LittleDuckParser.RULE_exit_lessthan

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExit_lessthan" ):
                listener.enterExit_lessthan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExit_lessthan" ):
                listener.exitExit_lessthan(self)




    def exit_lessthan(self):

        localctx = LittleDuckParser.Exit_lessthanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_exit_lessthan)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exit_notContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LittleDuckParser.RULE_exit_not

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExit_not" ):
                listener.enterExit_not(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExit_not" ):
                listener.exitExit_not(self)




    def exit_not(self):

        localctx = LittleDuckParser.Exit_notContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_exit_not)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exit_expContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LittleDuckParser.RULE_exit_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExit_exp" ):
                listener.enterExit_exp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExit_exp" ):
                listener.exitExit_exp(self)




    def exit_exp(self):

        localctx = LittleDuckParser.Exit_expContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_exit_exp)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(LittleDuckParser.SI, 0)

        def OPENP(self):
            return self.getToken(LittleDuckParser.OPENP, 0)

        def exit_openp(self):
            return self.getTypedRuleContext(LittleDuckParser.Exit_openpContext,0)


        def expresion(self):
            return self.getTypedRuleContext(LittleDuckParser.ExpresionContext,0)


        def CLOSEP(self):
            return self.getToken(LittleDuckParser.CLOSEP, 0)

        def exit_closep(self):
            return self.getTypedRuleContext(LittleDuckParser.Exit_closepContext,0)


        def exit_si(self):
            return self.getTypedRuleContext(LittleDuckParser.Exit_siContext,0)


        def cuerpo(self):
            return self.getTypedRuleContext(LittleDuckParser.CuerpoContext,0)


        def m(self):
            return self.getTypedRuleContext(LittleDuckParser.MContext,0)


        def SEMICOLON(self):
            return self.getToken(LittleDuckParser.SEMICOLON, 0)

        def exit_condition(self):
            return self.getTypedRuleContext(LittleDuckParser.Exit_conditionContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)




    def condicion(self):

        localctx = LittleDuckParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_condicion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(LittleDuckParser.SI)
            self.state = 167
            self.match(LittleDuckParser.OPENP)
            self.state = 168
            self.exit_openp()
            self.state = 169
            self.expresion()
            self.state = 170
            self.match(LittleDuckParser.CLOSEP)
            self.state = 171
            self.exit_closep()
            self.state = 172
            self.exit_si()
            self.state = 173
            self.cuerpo()
            self.state = 174
            self.m()
            self.state = 175
            self.match(LittleDuckParser.SEMICOLON)
            self.state = 176
            self.exit_condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINO(self):
            return self.getToken(LittleDuckParser.SINO, 0)

        def exit_sino(self):
            return self.getTypedRuleContext(LittleDuckParser.Exit_sinoContext,0)


        def cuerpo(self):
            return self.getTypedRuleContext(LittleDuckParser.CuerpoContext,0)


        def getRuleIndex(self):
            return LittleDuckParser.RULE_m

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterM" ):
                listener.enterM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitM" ):
                listener.exitM(self)




    def m(self):
